--- a/sample.html
+++ b/sample.html
@@ -10,6 +10,10 @@
         *{
             padding: 0%;margin: 0%;
         }
+        body{
+            width: 100vw;
+            height: 100vh;
+        }
         .container{ width: 100vw;height: 100vh;
             display: flex;
             flex-direction: column;
@@ -132,7 +136,7 @@
             }
         }
         .hd{
-            margin-top: 70px;
+            margin-top: 40px;
             font-family: cursive;
             font-size: 2rem;
             color: white;
