--- a/sample.html
+++ b/sample.html
@@ -14,7 +14,8 @@
             width: 100vw;
             height: 100vh;
         }
-        .container{ width: 100vw;height: 100vh;
+        .container{ width: 100vw;
+          height: 100vh;
             display: flex;
             flex-direction: column;
             animation: wall 8s infinite linear;
@@ -37,8 +38,8 @@
             }
         }
         .box{display: flex; 
-            margin: 60px auto;
-            width: 70vw;height: 70vh;
+            margin: 40px auto;
+            width: 60vw;height: 60vh;
             border: 5px solid white;
             box-shadow: -10px 10px 20px black;
         }
@@ -136,7 +137,7 @@
             }
         }
         .hd{
-            margin-top: 40px;
+            margin-top: 30px;
             font-family: cursive;
             font-size: 2rem;
             color: white;
@@ -147,8 +148,8 @@
         }
         fieldset{
             margin: auto;
-            width: 50vw;
-            height: 50vh;
+            width: 40vw;
+            height: 40vh;
             border: 2px solid white;
         }
         legend{
@@ -161,7 +162,7 @@
         }
         p{
             margin: 5px;
-            font-size: 15px;
+            font-size: 10px;
             color: white;
 
         }
