--- a/sample.html
+++ b/sample.html
@@ -147,9 +147,9 @@
             -webkit-text-stroke-width: 2px;
         }
         fieldset{
-            margin: auto;
+            margin-top: 20px;
             width: 40vw;
-            height: 40vh;
+            height: 50vh;
             border: 2px solid white;
         }
         legend{
@@ -158,23 +158,23 @@
             border: 2px solid white;
             margin: 5px;
             padding: 5px;
-            font-size: 15px;
+            font-size: 13px;
         }
         p{
             margin: 5px;
-            font-size: 10px;
+            font-size: 9px;
             color: white;
 
         }
         .img1 img{
-            width: 20px;height: 20px;
+            width: 15px;height: 15px;
             position: relative;
             top: 5px;
             margin-left: 5px;
             cursor: pointer;
         }
         .img2 img{
-            width: 20px;height: 20px;
+            width: 15px;height: 15px;
             position: relative;
             top: 5px;
             margin-left: 5px;
