--- a/sample.html
+++ b/sample.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+2<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -38,7 +38,7 @@
             }
         }
         .box{display: flex; 
-            margin: 40px auto;
+            margin: 30px auto;
             width: 60vw;height: 60vh;
             border: 5px solid white;
             box-shadow: -10px 10px 20px black;
