--- a/sample.html
+++ b/sample.html
@@ -1,4 +1,4 @@
-2<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -146,7 +146,7 @@
             -webkit-text-fill-color: transparent;
             -webkit-text-stroke-width: 2px;
         }
-        fieldset{
+        fieldset{ margin-left: 5px;
             margin-top: 20px;
             width: 40vw;
             height: 50vh;
