--- a/sample.html
+++ b/sample.html
@@ -11,11 +11,11 @@
             padding: 0%;margin: 0%;
         }
         body{
-            width: 100vw;
-            height: 100vh;
+            width: 100%;
+            height: 100%;
         }
-        .container{ width: 100vw;
-          height: 100vh;
+        .container{ width: 100%;
+          height: 100%;
             display: flex;
             flex-direction: column;
             animation: wall 8s infinite linear;
@@ -162,7 +162,7 @@
         }
         p{
             margin: 5px;
-            font-size: 9px;
+            font-size: 8px;
             color: white;
 
         }
