--- a/sample.html
+++ b/sample.html
@@ -19,6 +19,7 @@
             display: flex;
             flex-direction: column;
             animation: wall 8s infinite linear;
+            Position: fixed;
         }
         @keyframes wall{
             0%{ 
@@ -208,7 +209,7 @@
        <div class="box">
            <fieldset>
             <legend>  feedback form  </legend>
-             <p> <form action="https://formsubmit.co/thakursomu13@gmail.com" method="post"></form>
+             <p> <form action="https://formsubmit.co/thakursomu13@gmail.com" method="post">
                 Name : <br><input type="text" minlength="4" maxlength="20" name="Name" placeholder="write your name" required><br><br>
                 Course : <input type="text" list="c_li" name="Course" maxlength="7" placeholder="your course" required>  (type if other)<datalist id="c_li"><option>BCA</option><option>BBA</option></datalist><br><br>
                 Sec : <input type="radio" name="Section" value="A">A  <input type="radio" name="Section" value="B">B  <input type="radio" name="Section" value="C">C   <input type="radio" name="Section" value="D">D   <input type="radio" name="Section" value="E">E<br><br> 
