--- a/sample.html
+++ b/sample.html
@@ -13,6 +13,7 @@
         body{
             width: 100%;
             height: 100%;
+            position: fixed;
         }
         .container{ width: 100%;
           height: 100%;
